@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * added --prodSourceLabel to killTask
   * fixed fileCallbackListener to use TSL instead of sslv3
   * extracting LB Nr
   * changed panda.py to measure execution time for each call
